Implementación de cambios del sistema: modelos, base de datos, autenticación y módulo de proyectos.
- Creación de tablas y relaciones en SQL Server (Usuarios, Roles, Proyectos, Tareas y asignaciones).
- Configuración de Entity Framework y DbContext.
- Implementación completa del Login con hashing SHA256 y autenticación por cookies.
- Creación del CuentaController (Login, Logout, Access Denied).
- Se agregaron modelos y vistas base del sistema.
- Implementación del módulo de Proyectos con CRUD y asignación automática del profesor según usuario logueado.
- Corrección del error de clave foránea en la creación de proyectos.
- Ajustes y optimización general en controladores y vistas iniciales.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,14 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-48TH8CI;Database=GestorProyectos;Integrated Security=True;Encrypt=False;TrustServerCertificate=True;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "AllowedHosts": "*"
 }
