--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-48TH8CI;Database=GestorProyectos;Integrated Security=True;Encrypt=False;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost;Database=GestorProyectos;Integrated Security=True;Encrypt=False;TrustServerCertificate=True;"
   },
 
   "Logging": {
